--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ AMQP_EXCHANGE=vstu
 AMQP_USER=guest
 AMQP_PASSWORD=guest
 AMQP_HOST=192.168.221.142
+
+ADMIN_API_KEY='LBzoNl7OqhxT7WbjbrjrM-BSkeBtdYXc'
